--- a/app/src/main/res/layout/item_quotes.xml
+++ b/app/src/main/res/layout/item_quotes.xml
@@ -20,7 +20,7 @@
             android:justificationMode="inter_word"/>
 
         <TextView
-            android:id="@+id/tv_outhor"
+            android:id="@+id/tv_author"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Author"
